src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ambala</fullName>
                </value>
                <value>
                    <fullName>CHD</fullName>
                </value>
                <value>
                    <fullName>delhi</fullName>
                </value>
                <value>
                    <fullName>jaipur</fullName>
                </value>
                <value>
                    <fullName>karnal</fullName>
                </value>
                <value>
                    <fullName>kota</fullName>
                </value>
                <value>
                    <fullName>Mohali</fullName>
                </value>
                <value>
                    <fullName>panchkula</fullName>
                </value>
                <value>
                    <fullName>rapura</fullName>
                </value>
                <value>
                    <fullName>shahpur</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Joining__c</fullName>
        <label>Date of Joining</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Department__c.location__c</field>
                <operation>equals</operation>
                <value>198</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>delhi</fullName>
                    <default>true</default>
                    <label>delhi</label>
                </value>
                <value>
                    <fullName>haryana</fullName>
                </value>
                <value>
                    <fullName>Punjab</fullName>
                </value>
                <value>
                    <fullName>rajasthan</fullName>
                </value>
                <value>
                    <fullName>UP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>